Add API to retrieve available sessions
